--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --check --ignore-path .gitignore .",
-    "format:fix": "prettier --write --ignore-path .gitignore ."
+    "format:fix": "prettier --write --ignore-path .gitignore .",
+    "test:e2e": "cypress open --e2e --browser=chrome",
+    "test:e2e:headless": "cypress run --e2e --browser=chrome"
   },
   "dependencies": {
     "jsonwebtoken": "9.0.2",
@@ -18,14 +20,15 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/jsonwebtoken": "^9.0.3",
+    "@types/jsonwebtoken": "9.0.3",
     "@types/node": "20.8.6",
-    "@types/node-fetch": "^2.6.6",
+    "@types/node-fetch": "2.6.6",
     "@types/react": "18.2.28",
     "@types/react-dom": "18.2.13",
+    "cypress": "13.3.1",
     "eslint": "8.51.0",
     "eslint-config-next": "13.5.4",
-    "prettier": "^3.0.3",
+    "prettier": "3.0.3",
     "typescript": "5.2.2"
   }
 }
