Upgrade to Node 20, remove extra node-fetch, cleanup

--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -1,8 +1,11 @@
 {
+  "extends": "../tsconfig.json",
+  "files": [
+    "**/*.ts",
+    "../cypress.config.ts"
+  ],
   "compilerOptions": {
-    "target": "es5",
-    "lib": ["es5", "dom"],
-    "types": ["cypress", "node"]
-  },
-  "include": ["**/*.ts"]
+    "sourceMap": false,
+    "types": ["cypress"]
+  }
 }
