--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "aws-connect-sso-web-app",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=20.8.1"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -15,14 +18,12 @@
   "dependencies": {
     "jsonwebtoken": "9.0.2",
     "next": "13.5.4",
-    "node-fetch": "2.7.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "9.0.3",
     "@types/node": "20.8.6",
-    "@types/node-fetch": "2.6.6",
     "@types/react": "18.2.28",
     "@types/react-dom": "18.2.13",
     "cypress": "13.3.1",
