--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,4 +25,4 @@ jobs:
         with:
           browser: chrome
           start: npm run dev
-          wait-on: "http://localhost:3000"
+          wait-on: "http://localhost:3000/app/callcenters"
